# tipp10w

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
src/: action.rs  events.rs  lesson_savedata.rs  main.rs  state.rs  tipp10.rs  tipp10w.rs  ui.rs  widgets.rs
src/tipp10/: lesson.rs  lesson_savedata.rs  lesson_selection.rs
src/tipp10w/: event_result.rs
src/widgets/: action_selection.rs  lesson_widget.rs  lessons_widget.rs  parameter_widget.rs  text_box.rs
